[gd_scene load_steps=3 format=2]

[ext_resource path="res://Cenas/Menus/MenuOpcoes.gd" type="Script" id=1]
[ext_resource path="res://Public/backgroundMenuOptions.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -2.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="BotaoVoltarMenuPrincipal" type="Button" parent="TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -49.0
margin_bottom = 20.0
text = "Voltar"

[node name="ContainerOpcoes" type="VBoxContainer" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = -109.0
margin_right = 109.5
margin_bottom = 109.0

[node name="RangeAudioLabel" type="Label" parent="TextureRect/ContainerOpcoes"]
margin_right = 219.0
margin_bottom = 14.0
text = "√Åudio"

[node name="RangeAudio" type="SpinBox" parent="TextureRect/ContainerOpcoes"]
margin_top = 18.0
margin_right = 219.0
margin_bottom = 42.0

[node name="DropdownDificuldadeLabel" type="Label" parent="TextureRect/ContainerOpcoes"]
margin_top = 46.0
margin_right = 219.0
margin_bottom = 60.0
text = "Dificuldade"

[node name="DropdownDificuldade" type="OptionButton" parent="TextureRect/ContainerOpcoes"]
margin_top = 64.0
margin_right = 219.0
margin_bottom = 84.0

[connection signal="pressed" from="TextureRect/BotaoVoltarMenuPrincipal" to="." method="_on_BotaoVoltarMenuPrincipal_pressed"]
[connection signal="ready" from="TextureRect/ContainerOpcoes/DropdownDificuldade" to="." method="_on_DropdownDificuldade_ready"]
